--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.13.1",
+    "googleapis": "^2.1.6",
     "jade": "~1.11.0",
     "morgan": "~1.6.1",
+    "nodemw": "~0.7.5",
+    "request": "^2.65.0",
     "serve-favicon": "~2.3.0",
-		"nodemw": "~0.7.5"
+    "youtube-api": "^1.3.0"
   }
 }
