--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "nodemw": "~0.7.5",
     "request": "^2.65.0",
     "serve-favicon": "~2.3.0",
+    "underscore": "^1.8.3",
     "youtube-api": "^1.3.0"
   }
 }
