--- a/package.json
+++ b/package.json
@@ -12,12 +12,28 @@
     "express": "~4.13.1",
     "googleapis": "^2.1.6",
     "jade": "~1.11.0",
+    "material-ui": "^0.13.3",
     "mongodb": "^2.0.48",
     "morgan": "~1.6.1",
     "nodemw": "~0.7.5",
+    "react": "^0.14.3",
+    "react-bootstrap": "^0.28.1",
+    "react-dom": "^0.14.3",
+    "react-youtube": "^4.1.2",
     "request": "^2.65.0",
     "serve-favicon": "~2.3.0",
+    "superagent": "^1.4.0",
     "underscore": "^1.8.3",
     "youtube-api": "^1.3.0"
+  },
+  "devDependencies": {
+    "coffee-errors": "^0.8.6",
+    "coffee-reactify": "^4.0.0",
+    "grunt": "^0.4.5",
+    "grunt-browserify": "^4.0.1",
+    "grunt-cli": "^0.1.13",
+    "grunt-contrib-uglify": "^0.10.1",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-notify": "^0.4.3"
   }
 }
