--- a/package.json
+++ b/package.json
@@ -1,39 +1,40 @@
 {
-  "name": "music-search",
+  "name": "WikipediaNavigator",
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node app.js",
+    "start:dev": "node-dev app.js",
+    "start:all": "run-p start:dev watch",
+    "build": "browserify assets/javascripts/app.js --transform babelify --outfile public/main.js",
+    "watch": "watchify --verbose --debug assets/javascripts/app.js --transform babelify --outfile public/main.js"
   },
   "dependencies": {
+    "babel-core": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "babelify": "^8.0.0",
     "body-parser": "~1.13.2",
+    "browserify": "^15.0.0",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.13.1",
     "googleapis": "^2.1.6",
-    "jade": "~1.11.0",
-    "material-ui": "^0.13.3",
     "mongodb": "^2.0.48",
     "morgan": "~1.6.1",
     "nodemw": "~0.7.5",
-    "react": "^0.14.3",
+    "react": "^0.14.9",
     "react-bootstrap": "^0.28.1",
     "react-dom": "^0.14.3",
     "react-youtube": "^4.1.2",
     "request": "^2.65.0",
     "serve-favicon": "~2.3.0",
-    "superagent": "^1.4.0",
+    "superagent": "^3.8.2",
     "underscore": "^1.8.3",
     "youtube-api": "^1.3.0"
   },
   "devDependencies": {
-    "coffee-errors": "^0.8.6",
-    "coffee-reactify": "^4.0.0",
-    "grunt": "^0.4.5",
-    "grunt-browserify": "^4.0.1",
-    "grunt-cli": "^0.1.13",
-    "grunt-contrib-uglify": "^0.10.1",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-notify": "^0.4.3"
+    "watchify": "^3.9.0"
   }
 }
