ピボットする

--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "googleapis": "^2.1.6",
     "mongodb": "^2.0.48",
     "morgan": "~1.6.1",
+    "mysql": "^2.15.0",
+    "mysql2": "^1.5.1",
+    "node-bing-api": "^3.2.2",
     "nodemw": "~0.7.5",
     "react": "^0.14.9",
     "react-bootstrap": "^0.28.1",
