--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "browserify": "^15.0.0",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
+    "dotenv": "^4.0.0",
     "express": "~4.13.1",
     "googleapis": "^2.1.6",
     "mongodb": "^2.0.48",
