--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,14 @@
 {
-    "presets": ["react", "es2015", "stage-0"]
+  "presets": [
+    [
+      "env",
+      {
+        "targets": {
+          "chrome": "52"
+        }
+      }
+    ],
+    "react",
+    "stage-0"
+  ]
 }
