--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
   },
   "dependencies": {
     "babel-core": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "babelify": "^8.0.0",
@@ -23,6 +22,7 @@
     "dotenv": "^4.0.0",
     "express": "~4.13.1",
     "googleapis": "^2.1.6",
+    "material-ui": "^0.20.0",
     "mongodb": "^2.0.48",
     "morgan": "~1.6.1",
     "mysql": "^2.15.0",
@@ -30,6 +30,8 @@
     "node-bing-api": "^3.2.2",
     "nodemw": "~0.7.5",
     "react": "^0.14.9",
+    "react-autobind": "^1.0.6",
+    "react-autosuggest": "^9.3.4",
     "react-bootstrap": "^0.28.1",
     "react-dom": "^0.14.3",
     "react-youtube": "^4.1.2",
@@ -40,6 +42,7 @@
     "youtube-api": "^1.3.0"
   },
   "devDependencies": {
+    "babel-preset-env": "^1.6.1",
     "watchify": "^3.9.0"
   }
 }
