--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "serve-favicon": "~2.3.0",
     "superagent": "^3.8.2",
     "underscore": "^1.8.3",
+    "webworkify": "^1.5.0",
     "youtube-api": "^1.3.0"
   },
   "devDependencies": {
