--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,8 @@
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
+
 
 # Thumbnails
 ._*
@@ -21,6 +22,7 @@ Network Trash Folder
 Temporary Items
 .apdisk
 
+app.js
 public/main.js
 public/keypage.json
 public/keycat.json
