--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "postinstall": "npm run build",
+    "postinstall": "npm run build:client & npm run build:server",
     "start": "node app.js",
-    "start:dev": "DEBUG=index node-dev app.js",
-    "start:all": "run-p start:dev watch",
-    "build": "browserify assets/javascripts/app.js --transform babelify --outfile public/main.js",
-    "watch": "watchify --verbose --debug assets/javascripts/app.js --transform babelify --outfile public/main.js"
+    "start:dev": "npm run watch:server & npm run watch:client",
+    "build:server": "babel src/server/app.js --out-file ./app.js",
+    "build:client": "browserify src/client/app.js --transform babelify --outfile public/main.js",
+    "watch:server": "babel-watch src/server/app.js",
+    "watch:client": "watchify --verbose --debug src/client/app.js --transform babelify --outfile public/main.js"
   },
   "dependencies": {
     "babel-core": "^6.26.0",
@@ -44,6 +45,7 @@
   },
   "devDependencies": {
     "babel-preset-env": "^1.6.1",
+    "babel-watch": "^2.0.7",
     "watchify": "^3.9.0"
   }
 }
