--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "youtube-api": "^1.3.0"
   },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-watch": "^2.0.7",
     "watchify": "^3.9.0"
