--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "watch:client": "watchify --verbose --debug src/client/app.js --transform babelify --outfile public/main.js"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "babel-core": "^6.26.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "babelify": "^8.0.0",
     "body-parser": "~1.13.2",
     "browserify": "^15.0.0",
+    "cheerio": "^1.0.0-rc.2",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "dotenv": "^4.0.0",
